--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   intl: ^0.19.0
   image_picker: ^1.0.5
   fl_chart: ^0.66.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
